worked on darkmode, and fixes
