# community-backend/docs/swagger.json
@@ -2855,6 +2855,14 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "search",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
 					}
 				]
 			},
@@ -4976,6 +4984,14 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "search",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
 					}
 				]
 			},
@@ -4998,9 +5014,7 @@
 				],
 				"security": [
 					{
-						"jwt": [
-							"feedback:create"
-						]
+						"optionalJwt": []
 					}
 				],
 				"parameters": [],
@@ -5548,6 +5562,14 @@
 						"schema": {
 							"type": "boolean"
 						}
+					},
+					{
+						"in": "query",
+						"name": "allowed",
+						"required": false,
+						"schema": {
+							"type": "boolean"
+						}
 					}
 				]
 			},
@@ -5788,7 +5810,11 @@
 				"tags": [
 					"Community Sessions"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
